scheiss nicht rein

--- a/datastructures.tex
+++ b/datastructures.tex
@@ -553,7 +553,7 @@ Für Simulationen von Oberflächenabscheidungen ließen sich auf diese Weise auc
     \hfill
     \begin{subfigure}[t]{\subwidth}
       \includegraphics[width=\textwidth]{delaunay-alpha-d}
-      \subcaption{Alpha-Form: Hülle nach Entfernung von Simplexen mit $r_d < \alpha$ (nur innen)}
+      \subcaption{Alpha-Form: Hülle (nur innen) nach Entfernung von Simplexen mit $r_d < \alpha$}
       \label{fig:delaunay-alpha-c}
     \end{subfigure}
   }
