--- a/metadaten.tex
+++ b/metadaten.tex
@@ -6,7 +6,8 @@
 %======================================================================
 
 \newcommand{\dcsubject}{Masterarbeit}
-\newcommand{\dctitle}{Modellierung und Simulation von Schichtabscheidungen aus der Gasphase}
+\newcommand{\dctitle}{Atomistische Modellierung und Simulation des Filmwachstums bei Gasphasenabscheidungen}
+%% \newcommand{\dctitle}{Modellierung und Simulation von Schichtabscheidungen aus der Gasphase}
 \newcommand{\dcsubtitle}{} % Untertitel, falls erforderlich
 
 \newcommand{\dcauthortitle}{B.Sc.}
