--- a/potentials.tex
+++ b/potentials.tex
@@ -1,7 +1,12 @@
-\chapter{ReaxFF-Potentiale für SiO$_2$-Abscheidungen}
+\chapter{Parsivald-Modell}
+%% \chapter{ReaxFF-Potentiale für SiO$_2$-Abscheidungen}
 
-
-
+\input{parsivald}
+\clearpage
+\input{prerequisites}
+\clearpage
 \input{thermalresults}
+\clearpage
 \input{mdtests}
+\clearpage
 \input{mdtestresults}
